Fixed cut off on sidebar

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -14,9 +14,7 @@ html, body{
 	font-size: 150%
 }
 .sidebar{
-	position: fixed;
 	margin-left: 0px;
-	left: 0px;
 	width: 300px;
 	height: 100%;
 	padding: 15px;
